MCinaBox 1.New Downloader (stable) 2.Mult Languages Support 3.Fix some known bugs 4.Support mods?(Lack Tests). This is not a release Version, So there is no prebuild apk provided.I will continue to test this version,and release it in one day.